// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCommonPayload Возвращает корректый объект 1`] = `
Object {
  "clientInfo": Object {
    "clientType": 1,
  },
  "eventType": 3,
  "meta": Object {
    "clientTimestamp": Object {
      "nanos": 100000000,
      "seconds": 1641038400,
    },
  },
  "requestContext": Object {
    "absoluteOfferPosition": undefined,
    "cardViewType": 3,
    "eventPlace": 3,
    "pageNumber": undefined,
    "queryInfo": Object {
      "queryId": "cce63354dbe464c7baee8b7de82bcfd8",
      "queryText": "/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
    },
    "rereferer": undefined,
    "totalResults": undefined,
    "webReferer": "https://realty.test.vertis.yandex.ru/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
  },
  "schemaRegistryVersion": "",
  "trafficSource": undefined,
}
`;

exports[`getCommonPayload Возвращает полный объект 1`] = `
Object {
  "clientInfo": Object {
    "clientType": 1,
  },
  "eventType": 3,
  "meta": Object {
    "clientTimestamp": Object {
      "nanos": 100000000,
      "seconds": 1641038400,
    },
  },
  "requestContext": Object {
    "absoluteOfferPosition": 1,
    "cardViewType": 3,
    "eventPlace": 3,
    "pageNumber": 1,
    "queryInfo": Object {
      "queryId": "cce63354dbe464c7baee8b7de82bcfd8",
      "queryText": "/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
    },
    "rereferer": "https://realty.test.vertis.yandex.ru/moskva_i_moskovskaya_oblast/kupit/novostrojka/",
    "totalResults": 10,
    "webReferer": "https://realty.test.vertis.yandex.ru/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
  },
  "schemaRegistryVersion": "",
  "trafficSource": Object {
    "trafficFrom": "trafficFrom",
    "utmCampaign": "utmCampaign",
    "utmContent": "utmContent",
    "utmMedium": "utmMedium",
    "utmSource": "utmSource",
    "utmTerm": "utmTerm",
  },
}
`;
